--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,8 @@
 {
   "hosting": {
+    "predeploy": [
+      "npm run build"
+    ],
     "public": "build",
     "ignore": [
       "firebase.json",
